# koala-app

./: .gitignore  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml  jniLibs
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/machfour/koala/: AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  Config.java  CropImageActivity.java  MainActivity.java  MainActivityFragment.java  OpenCVActivity.java  ProcessImageActivity.java  RectangleDrawView.java  SimpleCameraActivity.java  Table.java  UriOpenException.java  Utils.java
app/src/main/java/com/machfour/koalaApp/: AutoFitTextureView.java  Camera2BasicFragment.java  CameraActivity.java  Config.java  CropImageActivity.java  MainActivity.java  MainActivityFragment.java  OpenCVActivity.java  ProcessImageActivity.java  RectangleDrawView.java  SimpleCameraActivity.java  Table.java  UriOpenException.java  Utils.java
app/src/main/res/drawable/: dark_divider_shape.xml  light_divider_shape.xml
app/src/main/res/layout/: activity_camera.xml  activity_crop_image.xml  activity_main.xml  activity_opencv.xml  activity_process_image.xml  activity_simple_camera.xml  content_main.xml  fragment_camera2_basic.xml  fragment_main.xml
app/src/main/res/menu/: menu_crop_image.xml  menu_main.xml  menu_process_image.xml
app/src/main/res/values/: strings.xml
data/: eng.nutrition-words  keys.txt  tesseract.config
